@@ -23,6 +23,7 @@ Ltac
 
 Tactics
 
+- Added "clear - id" to clear all hypotheses except the ones depending in id.
 - Added "dependent rewrite term" and "dependent rewrite term in hyp" (doc TODO)
 - The argument of Declare Left Step and Declare Right Step is now a term
   (it used to be a reference) (doc TODO)
